# RAG_DOCUMENT_UPDATE

./: .env.sample  .gitignore  CONTRIBUTING.md  LICENSE.md  NCHS.csv  README.md  SSA2a.csv  app.py  nixpacks.toml  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json
app/: app.py
data/: updated_dataset_1950_2022.csv
pages/: 01_Rag_Build.py  02_Generate_Sections.py  02a_Model_Config.py  02a_Upload_Dataset.py  03_API_Keys.py  03_Rag_Build.py  04_API_Keys.py  API_Keys.py  FIG_3_1.csv  Generate_Sections.py  Model_Config.py  Rag_Overview.py  Settings.py  Upload_Dataset.py  Vector_Store.py
rpec_agent_2024/: __init__.py
vector_store/: index.faiss  index.pkl
