[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rpec_agent_2024"]

[project]
name = "rpec_agent_2024"
version = "0.1.0"
authors = [
  {name="Your Name", email="your.email@example.com"},
]
description = "RPEC Mortality Analysis Application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "python-dotenv",
    "matplotlib", 
    "openai",
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "faiss-cpu",
    "PyMuPDF",
    "tabulate",
    "tiktoken",
    "numpy",
    "scipy",
    "scikit-learn",
    "sentence-transformers",
    "unstructured",
    "pdf2image",
    "pypdf",
    "pytest"
]

[project.optional-dependencies]
dev = ["pytest", "black"]
