[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pages"]

[project]
name = "RPEC_app"
version = "0.1.0"
authors = [
  {name="Your Name", email="your.email@example.com"},
]
description = "RPEC Mortality Analysis Application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "python-dotenv",
    "matplotlib", 
    "openai",
    "langchain-community>=0.0.29",
    "langchain-openai>=0.1.1",
    "langchain_openai>=0.1.0",
    "langchain-text-splitters",
    "faiss-cpu",
    "PyMuPDF",
    "tabulate",
    "tiktoken",
    "numpy",
    "scipy",
    "scikit-learn",
    "sentence-transformers",
    "unstructured",
    "pdf2image",
    "pypdf",
    "pytest",
    "google-generativeai>=0.3.0",
    "langchain-google-genai>=0.0.11",
    "nltk>=3.8.1",
    "langchain-qdrant>=0.1.0"
]

[project.optional-dependencies]
dev = ["pytest", "black"]
